--- a/Quotes.html
+++ b/Quotes.html
@@ -21,8 +21,7 @@
          There's much to learn from their challenges as well as their success.
          <ins>Luckily, they've condensed their wisdom into meaningful quotes that you can store for later use.</ins></p>
 
-<address>Originally published Jun 28 2021 4:00:00 PM
-      <br>
-      Updated June 07 2022</address>
+<i>Originally published Jun 28 2021 4:00:00 PM</i>
+      
 </body>
 </html>
